--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Teko:wght@600&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/orange.png">
+    <link rel="shortcut icon" href="img/icon.png">
     <title>optiPC</title>
     <link href="index.css" rel="stylesheet">
 </head>
